problems with foundry-devops

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,13 @@
 [profile.default]
 src = "src"
 out = "out"
+remappings = [
+    'murky/=lib/murky/',
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+    'foundry-devops/=lib/foundry-devops',
+    
+]
+fs_permissions = [{ access = "read-write", path = "./" }]
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
